--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -1,8 +1,8 @@
 <div>
   <h5>Login</h5>
   <p-inputGroup>
-    <button type="button" pButton label="Search"></button>
-    <input type="text" pInputText placeholder="Keyword" />
-    <input type="text" pInputText placeholder="Keyword" />
+    <button type="button" pButton label="Search" (click)="onSubmit()"></button>
+    <input [(ngModel)]="email" type="text" pInputText placeholder="Email" />
+    <input [(ngModel)]="password" type="email" pInputText placeholder="Keyword" />
   </p-inputGroup>
 </div>
